--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -9,101 +9,145 @@
 
 <body>
     <table>
-        <caption class="title">ОСНОВНЫЕ ТЕГИ HTML</caption>
-        <tr>
-            <th colspan="4"><span class="th-color">1) Структура Web-страницы</span></th>
-        </tr>
-        <tr>
-            <td><span class="main-tags">&lthtml&gt&lt/html&gt</span></td>
-            <td>Начало и конец страницы</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><span class="main-tags">&lthead&gt&lt/head&gt</span></td>
-            <td>Описание страницы, содержащее различную информацию не отображаемую в теле документа. Здесь распологается
-                тег имени страницы и теги для поисковых машин.</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><span class="main-tags">&lttitle&gt&lt/title&gt</span></td>
-            <td>Имя страницы</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><span class="main-tags">&ltbody&gt&ltbody&gt</span></td>
-            <td>Определяет видимую часть страницы</td>
-            <td></td>
-        </tr>
-        <tr>
-            <th colspan="2"><span class="th-color">2)Атрибуты документа</span></th>
-            <th><span class="th-color">Значение атрибутов</span></th>
-        </tr>
-        <tr>
-            <td><span class="tags">&ltbody background="URL"&gt</span></td>
-            <td>Фоновое изображение</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><span class="tags">&ltbody bgcolor="#RRGGBB"&gt</span></td>
-            <td>Цвет фона документа, используя значение цвета в виде RRGGBB - пример: FF0000 - красный цвет.</td>
-            <td rowspan="5">red, blue, #FF0000 и др</td>
-        </tr>
-        <tr>
-            <td><span class="tags">&ltbody text="#RRGGBB"&gt</span></td>
-            <td>Цвет текста документа, используя значение цвета в виде RRGGBB - пример: 000000 - чёрный цвет.</td>
-        </tr>
-        <tr>
-            <td><span class="tags">&ltbody link="#RRGGBB"&gt</span></td>
-            <td> Устанавливает цвет гиперссылок, используя значение в виде RRGGBB - пример: 00FF00 - зелёный цвет.</td>
-        </tr>
-        <tr>
-            <td><span class="tags">&ltbody vlink="#RRGGBB"&gt</span></td>
-            <td>Устанавливает цвет гиперссылок на которых вы уже побывали, используя значения цвета в виде RRGGBB -
-                пример: 333333 - серый цвет.</td>
-        </tr>
-        <tr>
-            <td><span class="tags">&ltbody alink="RRGGBB"&gt</span></td>
-            <td>Устанвливает цвета гиперссылок при нажатии</td>
-        </tr>
-        <tr>
-            <th colspan="2"><span class="th-color">3) Теги для форматирования текста</span></th>
-            <th><span class="th-color">Значение атрибутов</span></th>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
+        <caption class="title">Основные теги html</caption>
+        <div>
+            <tr>
+                <th colspan="4">1) Структура Web-страницы</th>
+            </tr>
+            <tr>
+                <td class="main-tags">&lthtml&gt&lt/html&gt</td>
+                <td>Начало и конец страницы</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="main-tags">&lthead&gt&lt/head&gt</td>
+                <td>Описание страницы, содержащее различную информацию не отображаемую в теле документа. Здесь
+                    распологается
+                    тег имени страницы и теги для поисковых машин.</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="main-tags">&lttitle&gt&lt/title&gt</td>
+                <td>Имя страницы</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="main-tags">&ltbody&gt&ltbody&gt</td>
+                <td>Определяет видимую часть страницы</td>
+                <td></td>
+            </tr>
+        </div>
+        <div>
+            <tr>
+                <th colspan="2">2)Атрибуты документа</th>
+                <th>Значение атрибутов</th>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody background="URL"&gt</td>
+                <td>Фоновое изображение</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody bgcolor="#RRGGBB"&gt</td>
+                <td>Цвет фона документа, используя значение цвета в виде RRGGBB - пример: FF0000 - красный цвет.</td>
+                <td rowspan="5">red, blue, #FF0000 и др</td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody text="#RRGGBB"&gt</td>
+                <td>Цвет текста документа, используя значение цвета в виде RRGGBB - пример: 000000 - чёрный цвет.</td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody link="#RRGGBB"&gt</td>
+                <td> Устанавливает цвет гиперссылок, используя значение в виде RRGGBB - пример: 00FF00 - зелёный цвет.
+                </td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody vlink="#RRGGBB"&gt</td>
+                <td>Устанавливает цвет гиперссылок на которых вы уже побывали, используя значения цвета в виде RRGGBB -
+                    пример: 333333 - серый цвет.</td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody alink="RRGGBB"&gt</td>
+                <td>Устанвливает цвета гиперссылок при нажатии</td>
+            </tr>
+        </div>
+        <div>
+            <tr>
+                <th colspan="2">3) Теги для форматирования текста</th>
+                <th>Значение атрибутов</th>
+            </tr>
+            <tr>
+                <td class="tags">&lth?&gt&lt/h?&gt</td>
+                <td>Создаёт заголовок (уровни от 1 до 6)</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&lth? align="*"&gt&lt/h?&gt</td>
+                <td>Заголовок с выравниванием</td>
+                <td>left, right, center, justify</td>
+            </tr>
+            <tr>
+                <td class="tags">&ltp&gt&lt/p&gt</td>
+                <td>Создаёт новый параграф</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltp align="*"&gt&lt/p&gt</td>
+                <td>Выравнивает параграф относительно одной из сторон </td>
+                <td>left, right, center, justify</td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbr&gt</td>
+                <td>Вставляет перевод строки</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltcenter&gt&ltcenter&gt</td>
+                <td>Выравнивание по центру</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltdiv align="*"&gt</td>
+                <td>Форматированиябольших блоков текста страницы также используются в таблицах стилий</td>
+                <td>left, right, center, justify</td>
+            </tr>
+        </div>
+        <div>
+            <tr>
+                <th colspan="2">4)Теги для форматирования шрифта</th>
+                <th>Значения атрибутов</th>
+            </tr>
+            <tr>
+                <td class="tags">&ltb&gt&lt/b&gt</td>
+                <td><b>Жирный</b></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&lti&gt&lt/i&gt</td>
+                <td><i>Курсив</i></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltu&gt&lt/u&gt</td>
+                <td><u>Подчёркнутый</u></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltsup&gt&lt/sup&gt</td>
+                <td>Верхний индекс - пример: а<sup>2</sup></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltsub&gt&lt/sub&gt</td>
+                <td>Нижний индекс - пример: а<sub>2</sub></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tags">&ltfont size=?&gt&lt/font&gt</td>
+                <td>Размер шрифта в пределах от 1 до 7</td>
+                <td></td>
+            </tr>
+        </div>
     </table>
 </body>
 
