--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -10,6 +10,7 @@
 <body>
     <table>
         <caption class="title">Основные теги html</caption>
+        <!--Первый блок--> <!--Разделил на блоки для удобства-->
         <div>
             <tr>
                 <th colspan="4">1) Структура Web-страницы</th>
@@ -37,40 +38,46 @@
                 <td></td>
             </tr>
         </div>
+        <!--Второй блок-->
         <div>
             <tr>
                 <th colspan="2">2)Атрибуты документа</th>
                 <th>Значение атрибутов</th>
             </tr>
             <tr>
-                <td class="tags">&ltbody background="URL"&gt</td>
-                <td>Фоновое изображение</td>
-                <td></td>
+                <td class="tags td1">&ltbody <i>background</i>="URL"&gt</td>
+                <td class="td2">Фоновое изображение</td>
+                <td class="td3"></td>
             </tr>
             <tr>
-                <td class="tags">&ltbody bgcolor="#RRGGBB"&gt</td>
-                <td>Цвет фона документа, используя значение цвета в виде RRGGBB - пример: FF0000 - красный цвет.</td>
+                <td class="tags">&ltbody <i>bgcolor</i>="#RRGGBB"&gt</td>
+                <td>Цвет фона документа, используя значение цвета в виде RRGGBB - пример: FF0000 - красный цвет.
+                </td>
                 <td rowspan="5">red, blue, #FF0000 и др</td>
             </tr>
             <tr>
-                <td class="tags">&ltbody text="#RRGGBB"&gt</td>
-                <td>Цвет текста документа, используя значение цвета в виде RRGGBB - пример: 000000 - чёрный цвет.</td>
-            </tr>
-            <tr>
-                <td class="tags">&ltbody link="#RRGGBB"&gt</td>
-                <td> Устанавливает цвет гиперссылок, используя значение в виде RRGGBB - пример: 00FF00 - зелёный цвет.
+                <td class="tags">&ltbody <i>text</i>="#RRGGBB"&gt</td>
+                <td>Цвет текста документа, используя значение цвета в виде RRGGBB - пример: 000000 - чёрный цвет.
                 </td>
             </tr>
             <tr>
-                <td class="tags">&ltbody vlink="#RRGGBB"&gt</td>
-                <td>Устанавливает цвет гиперссылок на которых вы уже побывали, используя значения цвета в виде RRGGBB -
+                <td class="tags">&ltbody <i>link</i>="#RRGGBB"&gt</td>
+                <td> Устанавливает цвет гиперссылок, используя значение в виде RRGGBB - пример: 00FF00 - зелёный
+                    цвет.
+                </td>
+            </tr>
+            <tr>
+                <td class="tags">&ltbody <i>vlink</i>="#RRGGBB"&gt</td>
+                <td>Устанавливает цвет гиперссылок на которых вы уже побывали, используя значения цвета в виде
+                    RRGGBB -
                     пример: 333333 - серый цвет.</td>
             </tr>
             <tr>
-                <td class="tags">&ltbody alink="RRGGBB"&gt</td>
+                <td class="tags">&ltbody <i>alink</i>="RRGGBB"&gt</td>
                 <td>Устанвливает цвета гиперссылок при нажатии</td>
             </tr>
         </div>
+        <!--Третий блок-->
         <div>
             <tr>
                 <th colspan="2">3) Теги для форматирования текста</th>
@@ -92,7 +99,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td class="tags">&ltp align="*"&gt&lt/p&gt</td>
+                <td class="tags">&ltp <i>align</i>="*"&gt&lt/p&gt</td>
                 <td>Выравнивает параграф относительно одной из сторон </td>
                 <td>left, right, center, justify</td>
             </tr>
@@ -107,11 +114,12 @@
                 <td></td>
             </tr>
             <tr>
-                <td class="tags">&ltdiv align="*"&gt</td>
+                <td class="tags">&ltdiv <i>align</i>="*"&gt</td>
                 <td>Форматированиябольших блоков текста страницы также используются в таблицах стилий</td>
                 <td>left, right, center, justify</td>
             </tr>
         </div>
+        <!--Четвёртый блок-->
         <div>
             <tr>
                 <th colspan="2">4)Теги для форматирования шрифта</th>
@@ -143,7 +151,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td class="tags">&ltfont size=?&gt&lt/font&gt</td>
+                <td class="tags">&ltfont <i>size</i>=?&gt&lt/font&gt</td>
                 <td>Размер шрифта в пределах от 1 до 7</td>
                 <td></td>
             </tr>
