--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -10,27 +10,58 @@
 </head>
 
 <body>
-    <div>
-        <span class="smarter">
+    <div class="main">
+
+        <!--Header-->
+        <div class="header">
             <h1>Get smarter, with our blog.</h1>
-        </span>
-        <span class="all-posts-main">
             <p class="all-posts">See All Posts</p>
-        </span>
-
-        <!--First block-->
-        <div>
-
         </div>
 
-        <!--Second block-->
-        <div>
+        <div class="content">
 
-        </div>
+            <!--First block-->
+            <div class="block-first">
+                <img src="IMAGE.jpg" alt="1">
+                <div class="content-content">
+                    <span class="blue-text-1">
+                        <p class="blue-text-text-1">Improvements</p>
+                    </span>
+                    <h2>Automating Daily Tasks from Your Phone</h2>
+                    <p class="content-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione
+                        sequi. Provident ad sed velit. Est ea ab.</p>
+                    <p class="footer">April 24, 2022</p>
+                </div>
+            </div>
 
-        <!--Third block-->
-        <div>
+            <!--Second block-->
+            <div class="block-second">
+                <img src="IMAGE2.png" alt="2">
+                <div class="content-content">
+                    <span class="blue-text-2">
+                        <p class="blue-text-text-2">Tips & Tricks</p>
+                    </span>
+                    <h2>Can You Automate Group Learning?</h2>
+                    <p class="content-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione
+                        sequi. Provident ad sed velit. Est ea ab.</p>
+                    <p class="footer">April 24, 2022</p>
+                </div>
+            </div>
 
+            <!--Third block-->
+            <div class="block-third">
+                <img src="IMAGE3.png" alt="3">
+                <div class="content-content">
+                    <span class="blue-text-3">
+                        <p class="blue-text-text-3">News</p>
+                    </span>
+                    <h2>Our $3,000,000 B Round Investors</h2>
+                    <p class="content-text">Eos ipsum et est quis neque cum. Quis autem est eligendi amet animi eaque.
+                        Itaque minus illo delectus vel vitae dolores
+                        minus.</p>
+                    <p class="footer">April 24, 2022</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
