--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -15,7 +15,9 @@
         <!--Header-->
         <div class="header">
             <h1>Get smarter, with our blog.</h1>
-            <p class="all-posts">See All Posts</p>
+            <a href="#">
+                <p class="all-posts">See All Posts</p>
+            </a>
         </div>
 
         <div class="content">
@@ -25,7 +27,9 @@
                 <img src="IMAGE.jpg" alt="1">
                 <div class="content-content">
                     <span class="blue-text-1">
-                        <p class="blue-text-text-1">Improvements</p>
+                        <a href="#">
+                            <p class="blue-text-text-1">Improvements</p>
+                        </a>
                     </span>
                     <h2>Automating Daily Tasks from Your Phone</h2>
                     <p class="content-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione
@@ -39,7 +43,9 @@
                 <img src="IMAGE2.png" alt="2">
                 <div class="content-content">
                     <span class="blue-text-2">
-                        <p class="blue-text-text-2">Tips & Tricks</p>
+                        <a href="#">
+                            <p class="blue-text-text-2">Tips & Tricks</p>
+                        </a>
                     </span>
                     <h2>Can You Automate Group Learning?</h2>
                     <p class="content-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione
@@ -53,7 +59,9 @@
                 <img src="IMAGE3.png" alt="3">
                 <div class="content-content">
                     <span class="blue-text-3">
-                        <p class="blue-text-text-3">News</p>
+                        <a href="#">
+                            <p class="blue-text-text-3">News</p>
+                        </a>
                     </span>
                     <h2>Our $3,000,000 B Round Investors</h2>
                     <p class="content-text">Eos ipsum et est quis neque cum. Quis autem est eligendi amet animi eaque.
