--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -25,10 +25,10 @@
             <!--First block-->
             <div class="block-first">
                 <img src="IMAGE.jpg" alt="1">
-                <div class="content-content">
-                    <span class="blue-text-1">
+                <div class="block-content">
+                    <span class="href-1">
                         <a href="#">
-                            <p class="blue-text-text-1">Improvements</p>
+                            <p class="href-text-1">Improvements</p>
                         </a>
                     </span>
                     <h2>Automating Daily Tasks from Your Phone</h2>
@@ -41,10 +41,10 @@
             <!--Second block-->
             <div class="block-second">
                 <img src="IMAGE2.png" alt="2">
-                <div class="content-content">
-                    <span class="blue-text-2">
+                <div class="block-content">
+                    <span class="href-2">
                         <a href="#">
-                            <p class="blue-text-text-2">Tips & Tricks</p>
+                            <p class="href-text-2">Tips & Tricks</p>
                         </a>
                     </span>
                     <h2>Can You Automate Group Learning?</h2>
@@ -57,10 +57,10 @@
             <!--Third block-->
             <div class="block-third">
                 <img src="IMAGE3.png" alt="3">
-                <div class="content-content">
-                    <span class="blue-text-3">
+                <div class="block-content">
+                    <span class="href-3">
                         <a href="#">
-                            <p class="blue-text-text-3">News</p>
+                            <p class="href-text-3">News</p>
                         </a>
                     </span>
                     <h2>Our $3,000,000 B Round Investors</h2>
