--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -5,72 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>lesson_4</title>
 </head>
 
 <body>
     <div class="main">
-
-        <!--Header-->
-        <div class="header">
-            <h1>Get smarter, with our blog.</h1>
+        <div class="head">
+            <h1 class="head-header">Get smarter, with our blog.</h1>
+            <a href="#"></a>
             <a href="#">
-                <p class="all-posts">See All Posts</p>
+                <p class="href">See All posts</p>
             </a>
         </div>
-
         <div class="content">
-
-            <!--First block-->
-            <div class="block-first">
-                <img src="IMAGE.jpg" alt="1">
-                <div class="block-content">
-                    <span class="href-1">
-                        <a href="#">
-                            <p class="href-text-1">Improvements</p>
-                        </a>
-                    </span>
-                    <h2>Automating Daily Tasks from Your Phone</h2>
-                    <p class="content-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione
-                        sequi. Provident ad sed velit. Est ea ab.</p>
-                    <p class="footer">April 24, 2022</p>
-                </div>
+            <!--first card-->
+            <div class="content-card">
+                <img src="img/IMAGE.jpg" alt="img">
+                <a class="href3" href="#">
+                    <p class="card-href">Improvements</p>
+                </a>
+                <h2 class="card-header">Automating Daily Tasks from Your Phone</h2>
+                <p class="card-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione sequi.
+                    Provident ad sed velit. Est ea ab.</p>
+                <p class="date">April 24, 2022</p>
             </div>
-
-            <!--Second block-->
-            <div class="block-second">
-                <img src="IMAGE2.png" alt="2">
-                <div class="block-content">
-                    <span class="href-2">
-                        <a href="#">
-                            <p class="href-text-2">Tips & Tricks</p>
-                        </a>
-                    </span>
-                    <h2>Can You Automate Group Learning?</h2>
-                    <p class="content-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione
-                        sequi. Provident ad sed velit. Est ea ab.</p>
-                    <p class="footer">April 24, 2022</p>
-                </div>
+            <!--second card-->
+            <div class="content-card">
+                <img src="img/IMAGE2.png" alt="img2">
+                <span class="blue">
+                    <a href="#">
+                        <p class="card-href">Tips & Tricks</p>
+                    </a>
+                </span>
+                <h2 class="card-header">Can You Automate Group Learning?</h2>
+                <p class="card-text">Dicta nihil ratione corrupti. Aut dolorem dolores omnis laboriosam ratione sequi.
+                    Provident ad sed velit. Est ea ab.</p>
+                <p class="date">April 24, 2022</p>
             </div>
-
-            <!--Third block-->
-            <div class="block-third">
-                <img src="IMAGE3.png" alt="3">
-                <div class="block-content">
-                    <span class="href-3">
-                        <a href="#">
-                            <p class="href-text-3">News</p>
-                        </a>
-                    </span>
-                    <h2>Our $3,000,000 B Round Investors</h2>
-                    <p class="content-text">Eos ipsum et est quis neque cum. Quis autem est eligendi amet animi eaque.
-                        Itaque minus illo delectus vel vitae dolores
-                        minus.</p>
-                    <p class="footer">April 24, 2022</p>
-                </div>
+            <!--third card-->
+            <div class="content-card">
+                <img src=" img/IMAGE3.png" alt="img3">
+                <span class="blue">
+                    <a href="#">
+                        <p class="card-href">News</p>
+                    </a>
+                </span>
+                <h2 class="card-header">Our $3,000,000 B Round Investors</h2>
+                <p class="card-text">Eos ipsum et est quis neque cum. Quis autem est eligendi amet animi eaque. Itaque
+                    minus illo delectus vel vitae dolores
+                    minus.</p>
+                <p class="date">April 24, 2022</p>
             </div>
         </div>
+
     </div>
 </body>
 
