--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -27,10 +27,12 @@
                 выгодном регионе, работаем на европейском сырье, что позволяет давать отличное качество соответствующее
                 европейским
                 стандартам</p>
-            <ul class="list">
-                <li>Экструзия и термоформование</li>
-                <li>Литьё под давлением</li>
-            </ul>
+            <div class="list">
+                <ul>
+                    <li>Экструзия и термоформование</li>
+                    <li>Литьё под давлением</li>
+                </ul>
+            </div>
             <button>ПОДРОБНЕЕ</button>
         </div>
     </div>
