--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -10,34 +10,28 @@
 </head>
 
 <body>
-    <h1 class="header"><span class="text1">МРТ - </span><span class="text2">золотой стандарт медицинской
-            визуализации:</span></h1>
-    <p class="header-text">Дарит нам безграничные возможности в постановке<br> точного диагноза на самом раннем этапе
-        его
-        развития</p>
-    <div class="content">
+    <h1><span class="text1">МРТ - </span>золотой стандарт медицинской</h1>
+    визуализации:</span></h1>
+    <p class="h1-text">Дарит нам безграничные возможности в постановке<br> точного диагноза на самом раннем этапе
+        его развития</p>
+    <div class="content content-em">
         <img src="img/img1.svg" alt="img1">
         <h2 class="content-header em">Шейный отдел</h2>
         <p class="content-text em2">Дегенеративно-дистрофические болезни шейного отдела позвоночника, выявить опухоли и
             межпозвонковые грыжи, компрессионный перелом шейных позвонков</p>
     </div>
-    <div class="content">
+    <div class="content content-rem">
         <img src="img/img2.svg" alt="img2">
         <h2 class="content-header rem">Грудной отдел</h2>
         <p class="content-text rem2">Нарушения не только в самих позвонках, но и близлежащих структурах. По снимкам МРТ
-            можно
-            установить заболевания и травмы
-            спинного мозга, связок, суставов, мышц, а также изменения спинномозгового канала и различные аномалии
-            развития</p>
+            можно установить заболевания и травмы спинного мозга, связок, суставов, мышц, а также изменения
+            спинномозгового канала и различныеаномалии развития</p>
     </div>
     <div class="content">
         <img src="img/img3.svg" alt="img3">
         <h2 class="content-header">Поясничный отдел</h2>
         <p class="content-text">Межпозвонковые грыжи, остеохондроз, переломы и другие травмы, артроз, болезни спинного
-            мозга, распространение
-            патологических процессов
-            органов малого таза,
-            онкологии</p>
+            мозга, распространение патологических процессов органов малого таза, онкологии</p>
     </div>
 </body>
 
