--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -33,7 +33,7 @@
                     <li>Литьё под давлением</li>
                 </ul>
             </div>
-            <button>ПОДРОБНЕЕ</button>
+            <button>подробнее</button>
         </div>
     </div>
 </body>
