--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -5,15 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>lesson_10</title>
 </head>
 
 <body>
-    <dib></dib>
-    <dib></dib>
-    <dib></dib>
-    <dib></dib>
-    <dib></dib>
+    <header>
+        <img src="img/logo.svg" alt="logo" class="logo">
+        <nav class="menu">
+            <li class="menu__item"><a href="#">Storyline</a></li>
+            <li class="menu__item"><a href="#">RoadMap</a></li>
+            <li class="menu__item"><a href="#">Team</a></li>
+            <li class="menu__item"><a href="#">Faq</a></li>
+        </nav>
+        <ul class="sosial">
+            <li class="social__item"><a href="#"><img src="img/telegram.svg" alt=""></a></li>
+            <li class="social__item"><a href="#"><img src="img/twitter.svg" alt=""></a></li>
+            <li class="social__item"><a href="#"><img src="img/opensea.svg" alt=""></a></li>
+            <li class="social__item"><a href="#"><img src="img/discord.svg" alt=""></a></li>
+        </ul>
+        <a href="#" class="man"><img src="img/Man.svg" alt=""></a>
+        <button class="conect">Connect wallet</button>
+    </header>
+    <main class="content">
+        <p class="text">«No matter your nationality, skin color, age, or gender — <br> you can rule the whole world
+            behind
+            the
+            mask»</p>
+        <h1 class="content-title">Mandelbrot Masks <br> <span class="orange">NFT</span> collection.</h1>
+        <p class="text">Collection of 10,001 uniquely rendered 3D facemasks to unite geniuses and educate those,
+            who
+            want to
+            be a part of a
+            community that will make the world a better and safer place. <br>
+            Who hides behind your mask?</p>
+        <div class="content__buttons">
+            <button class="whitelist">get whitelisted</button>
+            <button class="mint">mint</button>
+        </div>
+    </main>
+    <img src="img/bg.png" alt="background" class="bg">
+    <img src="img/fog.png" alt="fog" class="fog">
 </body>
 
 </html>
